<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activitys.HomeActivity">

    <ImageView
        android:id="@+id/btn_return"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:padding="5dp"
        android:src="@drawable/left_arrow"
        android:background="@drawable/shopping"
        android:visibility="gone" />

    <Button
        android:id="@+id/zero_dollar"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:background="@drawable/shopping"
        android:text="@string/zero_dollar"
        android:textColor="#fff"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:visibility="gone" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/shopping_cart"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:elevation="10dp"
        android:src="@drawable/shopping_cart"
        android:background="@drawable/shoppingcarte"
        android:visibility="gone" />

    <TextView
        android:id="@+id/title_home"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="15dp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:textColor="#000"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/resto" />

    <LinearLayout
        android:layout_below="@+id/title_home"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <Button
        android:id="@+id/btnContinue"
        android:background="#AC3533"
        android:layout_alignParentBottom="true"
        android:text="@string/go"
        android:textSize="20sp"
        android:textAllCaps="false"
        android:textColor="#fff"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:visibility="invisible" />


</RelativeLayout>